style: main page overflow fix for ReactPageSelector

--- a/src/layout/HomeLayout/Home.scss
+++ b/src/layout/HomeLayout/Home.scss
@@ -1,3 +1,8 @@
+// works on most browsers but really this is a hack thats only needed because of ReactPageSelector being wonky
+body:has(.page-selector) {
+  overflow: hidden;
+}
+
 .page-selector {
   padding: 10px;
   background: #00000067;
@@ -126,7 +131,7 @@
     padding: 0 100px;
     font-size: 40px;
     font-weight: 500;
-    
+
     @include toTabletScreen {
       padding: 0;
       font-size: 30px;
